Fixed css to align search bar images with rest of search bar

--- a/stat-finder/src/styles/search.css
+++ b/stat-finder/src/styles/search.css
@@ -4,4 +4,10 @@
 
 .active-logo, .inactive-logo {
     background-color: white;
+    height: 58px;
+    width: auto; 
+    cursor: pointer;
+    margin-top: 50px;
+    border: none;
+    padding: 10px; 
 }
